--- a/src/sass/3-component/_sidebar-mini.scss
+++ b/src/sass/3-component/_sidebar-mini.scss
@@ -1,7 +1,7 @@
 // Componant: Sidebar Mini
 
 @media (min-width: 768px) {
-	.sidebar-mini.sidenav-closed {
+	.sidebar-mini.sidenav-toggled {
 		.app-sidebar__user-name,
 		.app-sidebar__user-designation,
 		.treeview-indicator {
